updated pom.xml to use java 1.10
Signed-off-by: zerjioang <sergio.anguita@opendeusto.es>